--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: decryptedappstore-action
 author: level3tjg
+improved by: JohnnyPh
 description: Download decrypted IPA from https://armconverter.com/decryptedappstore
 inputs:
   appstore_url:
@@ -52,7 +53,9 @@ runs:
       run: |
         appstore_url="${{ inputs.appstore_url }}"
         echo "appstore-id=$(echo ${appstore_url##*/} | cut -c 3-)" >> "$GITHUB_OUTPUT"
-        echo "bundle-id=$(curl -s "${{ inputs.appstore_url }}" | xmllint --html --xpath "string(//script[@id=\"shoebox-media-api-cache-apps\"])" - 2> /dev/null | jq -r ".[] | fromjson | .d[0].attributes.platformAttributes.ios.bundleId")" >> "$GITHUB_OUTPUT"
+        app_data=$(curl -sL "${{ inputs.appstore_url }}" | xmllint --html --xpath "string(//script[@id='shoebox-media-api-cache-apps'])" - 2>/dev/null)
+        bundle_id=$(echo "${app_data}" | jq -r ".[] | fromjson | .d[0].attributes.platformAttributes.ios.bundleId")
+        echo "bundle-id=${bundle_id}" >> "$GITHUB_OUTPUT"
 
     - name: Get download token
       id: get-token
